  line might have been used as a normal part of the memo.

* removed --properties option: it wasn't implemented yet and won't be in 0.8

* fixed regression in alpha 1: setting sync mode during status query
  or sync affected *all* sources, even the disabled ones. Now it only
  affects the enabled ones, as intended. To enable disabled sync sources,
  list them after the server name.


SyncEvolution 0.7 -> 0.8 alpha 1, 19.04.2008
--------------------------------------------
C++ client library: a snapshot of the development version

Updating user configuration: this version introduces a new, simplified
configuration layout. Old configurations still work. They can be
converted to the new format via a new "--migrate" command line option.

*** WARNING ***: this version uses a different change tracking for
calendars, task lists and memos. After switching from a previous
release to the current one or vice versa, do a "syncevolution --sync
--refresh-from-server" once to reset the change tracking. Not doing so
can result in applying the same changes to the server multiple times
and thus duplicates.

* New configuration file layout: following the freedesktop.org
  recommendation, new configurations are stored in
  $XDG_CONFIG_HOME/syncevolution or $HOME/.config/syncevolution if
  XDG_CONFIG_HOME is not set. The old layout under
  $HOME/.sync4j/evolution is still supported.

* New command line options: new configurations can be created by
  syncevolution itself (--configure), including setting of all
  configuration properties (--sync-property, --source-property).
  The configuration can dumped to stdout (--print-config), with or
  without comments explaining each property (--quiet). See the
  README for details.

* The "evolutionsource" source property no longer has to be configured.
  If left blank, the default client database will be synchronized.

* Selecting which kind of data is to be synchronized under a specific